    several other build systems by using different "generators" provided
    by CMake (for instance Ninja, CodeBlocks, Eclipse, KDevelop3, Xcode, etc.).
    See README.CMake.txt for more information.

  - autoconf/configure is still supported by the FLTK team for backwards
    compatibility with older systems that lack CMake support.


  New Features and Extensions

  - (add new items here)
  - MacOS platform: Added support for rescaling the GUI of any app at run-time
    using the command/+/-/0/ keystrokes.
  - MSWindows platform: Added optional support for rescaling the GUI of any app
    at run-time using the ctrl/+/-/0/ keystrokes. This requires to build the
    FLTK library with -DFLTK_HIDPI_SUPPORT (for now). This option also makes
    app detect the desktop scaling factor and automatically scale their GUI
    accordingly. This effectively renders WIN32 FLTK apps "per-monitor DPI-aware"
    whereas they were "DPI-unaware" with FLTK 1.3.4.
  - FLTK apps on the MacOS platform contain automatically a Window menu, which,
    under MacOS ≥ 10.12, allows to group/ungroup windows in tabbed form. The new
    Fl_Sys_Menu_Bar::window_menu_style() function allows to specify various
    styles for the Window menu, even not to create it.
  - New function: int fl_open_ext(const char* fname, int binary, int oflags, ...)
    to control the opening of files in binary/text mode in a cross-platform way.
  - New Fl_SVG_Image class: gives support of scalable vector graphics images
    to FLTK using the nanosvg software.
  - Fl_Text_Selection got a new method length() and returns 0 in length()
    and in all offsets (start(), end(), position()) if no text is selected
    (selected() == false). The behavior in FLTK 1.3 and earlier versions
    (returning undefined values if !selected()) was confusing.
  - Added support for MacOS 10.13 "High Sierra".
  - New method Fl_Group::bounds() replaces Fl_Group::sizes() which is now