@@ -4,7 +4,7 @@
 // Definition of Apple Darwin system driver
 // for the Fast Light Tool Kit (FLTK).
 //
-// Copyright 2010-2016 by Bill Spitzak and others.
+// Copyright 2010-2018 by Bill Spitzak and others.
 //
 // This library is free software. Distribution and use rights are outlined in
 // the file "COPYING" which should have been included with this file.  If this
@@ -81,6 +81,8 @@ public:
   virtual const char *meta_name();
   virtual const char *alt_name();
   virtual const char *control_name();
+  virtual int run_also_windowless();
+  virtual int wait_also_windowless(double delay);
 };
 
 #endif // FL_DARWIN_SYSTEM_DRIVER_H
